--- a/SoftIII/nbproject/private/private.properties
+++ b/SoftIII/nbproject/private/private.properties
@@ -1,2 +1,8 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+file.reference.postgresql-9.2-1003.jdbc4.jar=C:\\Users\\victor\\Documents\\postgresql-9.2-1003.jdbc4.jar
+file.reference.postgresql-9.2-1003.jdbc4.jar-1=C:\\Users\\victor\\Documents\\postgresql-9.2-1003.jdbc4.jar
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\victor\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
