--- a/SoftIII/nbproject/project.properties
+++ b/SoftIII/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SiPrin2.0
+application.vendor=victor
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,12 +25,13 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/SiPrin2.0.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.postgresql-9.2-1003.jdbc4.jar=D:\\Facultad\\3\u00ba a\u00f1o\\Programacion II - Java\\2013\\postgresql-9.2-1003.jdbc4.jar
 file.reference.postgresql-9.2-1003.jdbc4.jar-1=F:\\Facultad\\Ingenieria en Inform\u00e1tica\\3er A\u00f1o\\Programacion 2\\2013\\postgresql-9.2-1003.jdbc4.jar
 file.reference.postgresql-9.2-1003.jdbc4.jar-2=C:\\Users\\victor\\Documents\\postgresql-9.2-1003.jdbc4.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.postgresql-9.2-1003.jdbc4.jar}:\
     ${file.reference.postgresql-9.2-1003.jdbc4.jar-1}:\
